--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -28,7 +29,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
 }
